# vh-mail-hook

./: Caddyfile  Cargo.toml  Dockerfile  README.md  dev.md  dev.sh  readme.md
.github/workflows/: docker-publish.yml  npm-publish.yml  rust.yml
crates/common/: Cargo.toml  build.rs
crates/common/migrations/: 20240327000000_initial_schema.sql  20240327000001_add_user_settings.sql  20240327000001_fix_mailbox_deletion.sql  20240327000002_add_user_credentials.sql  20240327000003_add_mailbox_name.sql
crates/common/src/: db.rs  lib.rs  rate_limit.rs  security.rs
crates/mail-service/: Cargo.toml
crates/mail-service/src/: config.rs  dns.rs  lib.rs  main.rs  service.rs
crates/mail-service/src/security/: encryption.rs
crates/mail-service/src/smtp/: handler.rs  mod.rs  server.rs
crates/mail-service/tests/: integration_test.rs
crates/web-app/: Cargo.toml
crates/web-app/frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
crates/web-app/frontend/src/: app.html
crates/web-app/frontend/src/lib/: age.ts  api.ts  bech32.d.ts  config.ts  error.ts  storage.ts
crates/web-app/frontend/src/lib/components/: ErrorAlert.svelte  GitHubLoginButton.svelte  GoogleLoginButton.svelte  TelegramLoginWidget.svelte  Toast.svelte
crates/web-app/frontend/src/lib/stores/: auth.ts
crates/web-app/frontend/src/lib/types/: telegram.ts
crates/web-app/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
crates/web-app/frontend/src/routes/(protected)/: +layout.ts
crates/web-app/frontend/src/routes/api-keys/: +page.svelte
crates/web-app/frontend/src/routes/auth/: +layout.ts
crates/web-app/frontend/src/routes/auth/[provider]/callback/: +page.svelte
crates/web-app/frontend/src/routes/auth/login/: +page.svelte
crates/web-app/frontend/src/routes/auth/register/: +page.svelte
crates/web-app/frontend/src/routes/mailboxes/: +page.svelte
crates/web-app/frontend/src/routes/mailboxes/[id]/: +page.svelte
crates/web-app/frontend/src/routes/settings/: +page.svelte
crates/web-app/frontend/static/: swagger.html
crates/web-app/src/: api_spec.rs  lib.rs  main.rs
crates/web-app/src/auth/: mod.rs  oauth.rs  password.rs  telegram.rs
crates/web-app/tests/: api_test.rs  full_flow_test.rs
examples/: README.md
examples/node/: .env.example  package-lock.json  package.json  read-email.js
src/: main.rs
tests/: package.json  pnpm-lock.yaml
tests/scripts/: send-test-email.js
