[workspace]
members = [
    "crates/mail-service",
    "crates/web-app",
    "crates/common"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate", "macros"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15"
once_cell = "1.19" 

[package]
name = "vh-mail-hook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mail-service = { path = "crates/mail-service" }
web-app = { path = "crates/web-app" }
common = { path = "crates/common" }
dotenv = { workspace = true }
once_cell = { workspace = true }