[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
age = { version = "0.9", features = ["armor"] }
base64 = "0.21"
axum = { version = "0.7", features = ["macros"] } 