[package]
name = "web-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
mail-service = { path = "../mail-service" }
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
bytes = "1.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1" 