[package]
name = "web-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
mail-service = { path = "../mail-service" }
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
oauth2 = "4.4"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
rust-embed = "6.8"
mime_guess = "2.0"
dotenv = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
bytes = "1.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1" 